# tinki

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  deploy.sh  index.html  index.md  serve.sh  serve_debug.sh
md/: Diwata.md  Markdown-example.md  Resume.md  Spongedown.md  Svgbob.md  markdeep.md
md/Diwata/: Architecture.md
md/Svgbob/: Circles.md
server/: Cargo.toml  README.md  md
server/md/: Notes.md  SUMMARY.md  arrays.md  basics.md  cargo.md  closure.md  containers.md  dillinger.md  features.md  for-and-range.md  hello-world.md  history.md  if-else-use-case.md  if-else.md  influence.md  making-it-pass.md  match.md  mats.md  no-classes.md  ownership-can-be-mutably-borrowed.md  ownership-can-be-transferred.md  ownership-is-singular.md  ownership.md  primitive_types.md  resources.md  rust.md  struct.md  test-with-failure.md  testing.md  traits-with-generic.md  traits.md  tuples.md  variable_binding.md  variable_mutability.md  vectors.md  whos-using.md  why-rust.md
server/src/: main.rs
src/: inject.rs  lib.rs  main.rs  route_service.rs
static/: index.md  minimal.css
static/md/: Diwata.md  Home.md  Resume.md  Rustorm.md  Spongedown.md  Svgbob.md
static/md/Diwata/: Architecture.md
static/md/Svgbob/: Design-Implementation.md  Specification.md
