[package]
name = "tinki"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

[dependencies]
stdweb = "0.4"
web_logger = "0.1"
log = "0.4"
yew = {path = "../yew"}
failure = "0.1"
url = "1.7.1"
url_path = "0.1.2"
web_util = {path = "../web_util"}

[dependencies.spongedown]
version = "0.3.2"
features = ["with-csv", "with-embed"]


[replace]
"url_path:0.1.2" = { path = "../url_path" }
"spongedown:0.3.2" = { path = "../spongedown"}

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = "abort"
