[package]
name = "tinki"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../sauron", features = ["with-dom"] }
url_path = { path = "../url_path" }
log = "0.4"
console_log = "0.1"
spongedown = { path = "../spongedown" }
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1"

