[package]
name = "tinki"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"
repository = "https://github.com/ivanceras/tinki"
documentation = "https://docs.rs/tinki"
keywords = ["markdown", "wiki", "svgbob"]

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { version = "0.24.0", features = ["with-dom"] }
url_path = "0.1.3"
log = "0.4"
console_log = "0.1"
spongedown = "0.4.1"
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4.5"}

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
